services/whoami/deployment.yaml
# declare Traefik deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: whoami-demo
  labels:
    app: whoami-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-demo
  template:
    metadata:
      labels:
        app: whoami-demo
    spec:
      containers:
      - name: whoami
        image: "gcr.io/admin-project-220208/ferrandinand-whoami:master"
        imagePullPolicy: "Always"
---
# declare Traefik deployment
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: whoami-demo-canary
  labels:
    app: whoami-demo-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-demo-canary
  template:
    metadata:
      labels:
        app: whoami-demo-canary
    spec:
      containers:
      - name: whoami
        image: "gcr.io/admin-project-220208/ferrandinand-whoami:canary"
        imagePullPolicy: "Always"
