services/whoami/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami-demo
spec:
  selector:
    app: whoami-demo
  ports:
  - name: http
    targetPort: 8000
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: whoami-demo-canary
spec:
  selector:
    app: whoami-demo-canary
  ports:
  - name: http
    targetPort: 8000
    port: 80
